Fixed not scrolling new messages into view when received in a non-visible room.

--- a/assets/css/application.styl
+++ b/assets/css/application.styl
@@ -327,6 +327,7 @@ room-members-sidebar-width = 150px
 
 .room-container
   position absolute
+  overflow hidden
 
   .room-info
     border 1px solid #B4B4B4
@@ -348,13 +349,16 @@ room-members-sidebar-width = 150px
   // Scrollable.
   overflow auto
 
+  position absolute
+  width 100%
+
   box-sizing border-box
   border-left 1px solid #B4B4B4
   border-right 1px solid #B4B4B4
   background-color #fff
 
   &.inactive
-    display none
+    left 100%
 
 .loading-more-messages
   position absolute
